@@ -519,7 +519,7 @@
 
                 // Use Optimizer.optimize_kontors()
                 const optimizer = new Optimizer(player, mob, list_modifiers);
-                const result = optimizer.optimize();
+                const result = optimizer.optimize_kontors();
                 if (result && result.bestStats && result.winChance !== undefined) {
                     const [power, precision, evasion, hull] = result.bestStats;
                     const tmp_player = new Player({
@@ -755,7 +755,7 @@
                     <div class="form-row">
                         <div class="form-group">
                             <label for="n_fights">Number of fights:</label>
-                            <input type="number" id="n_fights" name="n_fights" value="1000" min="1" max="1000000">
+                            <input type="number" id="n_fights" name="n_fights" value="10000" min="1" max="1000000">
                         </div>
                         <div class="form-group" style="align-items: flex-start; justify-content: flex-start;">
                             <button id="simulateBtn" type="button">Simulate</button>
@@ -788,7 +788,7 @@
             const now = new Date();
             const pad = n => n.toString().padStart(2, '0');
             const dateStr = "2025-05-04";
-            const timeStr = "15:16";
+            const timeStr = "20:34";
             lastUpdated.textContent = `Last updated: ${dateStr} ${timeStr}`;
         }
     </script>
